Fixed aligning.

--- a/app/questions/questions.view.css
+++ b/app/questions/questions.view.css
@@ -45,7 +45,7 @@
 
 [mol_app_questions_details_close] {
 	color: inherit;
-	padding: 1.25rem 1rem;
+	padding: 1rem;
 }
 
 [mol_app_questions_details_descr] {
