--- a/demo/demo.view.css
+++ b/demo/demo.view.css
@@ -27,6 +27,5 @@
 	flex: 1 1 auto;
 	display: flex;
 	align-content: flex-start;
-	align-items: flex-start;
 	box-sizing: border-box;
 }
