--- a/text/text.view.css
+++ b/text/text.view.css
@@ -23,7 +23,7 @@
 
 [mol_text_header] {
 	display: block;
-	padding: .5rem 0;
+	padding: .5rem;
 	font-weight: 500;
 	margin: 0;
 }
@@ -64,7 +64,7 @@
 	max-width: 100%;
 	max-height: 50vh;
 	overflow: auto;
-	margin: .5rem auto .5rem 0;
+	margin: .5rem auto .5rem .5rem;
 	flex-grow: 0;
 }
 
